# fast_api_pytest_example

./: .gitignore  pyproject.toml
src/pytest_example/: config.py
src/pytest_example/entity/: todo.py
src/pytest_example/entrypoint/rest_api/: app.py  asgi.py
src/pytest_example/entrypoint/rest_api/resource/: __init__.py  dto.py  router.py  todo.py
src/pytest_example/repository/impl/: dynamo_db_todo.py  dynamo_event_helper.py
src/pytest_example/repository/interface/: itodo_repo.py
src/pytest_example/usecase/: create_todo.py  list_todo.py  mark_complete_todo.py
tests/: test_pytest_example.py
tests/test_pytest_example/test_entity/: test_todo.py
tests/test_pytest_example/test_entrypoint/test_rest_api/: conftest.py
tests/test_pytest_example/test_entrypoint/test_rest_api/test_resource/: test_todo_resource.py
tests/test_pytest_example/test_usecase/: test_create_todo.py  test_list_todo.py  test_mark_complete_todo.py
