[tool.poetry]
name = "pytest_example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
aioboto3 = "^10.0.0"
aiosqlite = "^0.17.0"
hypercorn = "^0.14.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
